# idris-chez

./: .gitignore  LICENSE  README.md  idris-chez.cabal
idris/: Chez.idr  chez.ipkg
rts/: rts.ss
src/: Main.hs
src/Chez/: Codegen.hs  Compatibility.hs  Operators.hs  Optimization.hs  Util.hs
src/IRTS/: CodegenChez.hs
test/: runtest.hs
test/samples/: loadshared.idr  scheme.idr
